# piezo

./: .gitignore  Cargo.toml  README.md
crates/synth-agent/: Cargo.toml
crates/synth-agent/src/: agent.rs  claude.rs  lib.rs  llm.rs  tools.rs
crates/synth-audio/: Cargo.toml
crates/synth-audio/examples/: play.rs
crates/synth-audio/src/: lib.rs
crates/synth-cli/: Cargo.toml
crates/synth-cli/src/: main.rs
crates/synth-core/: Cargo.toml
crates/synth-core/examples/: render_wav.rs
crates/synth-core/src/: engine.rs  env.rs  filter.rs  lfo.rs  lib.rs  osc.rs  params.rs  reverb.rs  sequencer.rs  voice.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
ui/: index.html  main.js  styles.css
