[package]
name = "synth-tauri"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Desktop app for the synth: knobs, a keyboard piano, and the agent chat."

[lib]
name = "synth_tauri"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
synth-core = { path = "../crates/synth-core" }
synth-audio = { path = "../crates/synth-audio" }
synth-agent = { path = "../crates/synth-agent" }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync", "time"] }
serde_json = "1"
