[package]
name = "synth-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Agentic harness: edit the synth patch in plain English. Provider-agnostic LLM trait with a Claude (Anthropic) implementation."

[dependencies]
synth-core = { path = "../synth-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
