[package]
name = "synth-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A terminal REPL that ties the engine, audio, and agent together: describe a sound, hear it."

[[bin]]
name = "synth"
path = "src/main.rs"

[dependencies]
synth-core = { path = "../synth-core" }
synth-audio = { path = "../synth-audio" }
synth-agent = { path = "../synth-agent" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
