[package]
name = "synth-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure-Rust DSP core for the Synth project: oscillators, filters, envelopes, LFO, voices, and a named parameter store."

[dependencies]

[dev-dependencies]
hound = "3.5"
